[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/menus/LobbyMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Staatliches-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[node name="LobbyMenu" type="Node"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.180392, 0.0313726, 0.0313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.5
margin_top = -51.5005
margin_right = 118.5
margin_bottom = 51.5005
custom_fonts/font = SubResource( 1 )
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.498
margin_top = -51.5
margin_right = 118.498
margin_bottom = 51.5
custom_fonts/font = SubResource( 1 )
text = "Join Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
margin_left = 88.0
margin_top = 576.0
margin_right = 304.0
margin_bottom = 663.0
custom_fonts/font = SubResource( 1 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -186.0
margin_top = 34.0
margin_right = 186.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 2 )
text = "Multiplayer Mode"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameStatusLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -186.0
margin_top = -187.0
margin_right = 186.0
margin_bottom = -53.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
